# xrpl-axelar-amplifier

./: Cargo.toml
ampd/: Cargo.toml
ampd/src/: lib.rs
ampd/src/handlers/: config.rs  errors.rs  evm_verify_msg.rs  mod.rs  multisig.rs  xrpl_multisig.rs  xrpl_verify_msg.rs
ampd/src/tests/: config_template.toml
ampd/src/xrpl/: json_rpc.rs  types.rs  verifier.rs
contracts/axelarnet-gateway/: Cargo.toml
contracts/coordinator/: Cargo.toml
contracts/gateway/: Cargo.toml
contracts/interchain-token-service/: Cargo.toml
contracts/interchain-token-service/src/: abi.rs  primitives.rs
contracts/interchain-token-service/src/contract/: execute.rs
contracts/interchain-token-service/src/contract/execute/: interceptors.rs
contracts/interchain-token-service/tests/: execute.rs
contracts/interchain-token-service/tests/utils/: messages.rs
contracts/multisig/: Cargo.toml
contracts/multisig-prover/: Cargo.toml
contracts/multisig-prover/src/test/: test_utils.rs
contracts/multisig/src/: multisig.rs
contracts/multisig/src/contract/: query.rs
contracts/rewards/: Cargo.toml
contracts/router/: Cargo.toml
contracts/service-registry/: Cargo.toml
contracts/voting-verifier/: Cargo.toml
contracts/voting-verifier/src/: contract.rs  error.rs  events.rs  execute.rs  msg.rs  query.rs  state.rs
contracts/voting-verifier/tests/: tests.rs
contracts/xrpl-gateway/: Cargo.toml
contracts/xrpl-gateway/src/: contract.rs  events.rs  msg.rs  state.rs
contracts/xrpl-gateway/src/contract/: execute.rs  query.rs
contracts/xrpl-gateway/src/contract/migrations/: v0_2_3.rs
contracts/xrpl-gateway/tests/: contract.rs
contracts/xrpl-gateway/tests/testdata/: successful_route_incoming.golden
contracts/xrpl-multisig-prover/: Cargo.toml
contracts/xrpl-multisig-prover/src/: axelar_workers.rs  contract.rs  error.rs  events.rs  lib.rs  msg.rs  querier.rs  query.rs  reply.rs  state.rs  types.rs  xrpl_multisig.rs  xrpl_serialize.rs
contracts/xrpl-multisig-prover/src/contract/: execute.rs  query.rs  reply.rs
contracts/xrpl-multisig-prover/src/test/: test_data.rs
contracts/xrpl-voting-verifier/: Cargo.toml
contracts/xrpl-voting-verifier/src/: client.rs  contract.rs  error.rs  events.rs  msg.rs  state.rs
contracts/xrpl-voting-verifier/src/contract/: execute.rs  query.rs
contracts/xrpl-voting-verifier/src/contract/migrations/: v0_5_0.rs
external-gateways/stellar/: Cargo.toml
integration-tests/: Cargo.toml
integration-tests/src/: axelarnet_gateway_contract.rs  interchain_token_service_contract.rs  lib.rs  voting_verifier_contract.rs  xrpl_gateway_contract.rs  xrpl_multisig_prover_contract.rs  xrpl_voting_verifier_contract.rs
integration-tests/tests/: chain_freeze_unfreeze.rs  message_routing.rs  update_worker_set.rs
integration-tests/tests/test_utils/: mod.rs
